InMemoryUser Authentication Basic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/animais
 spring.datasource.username=victor
 spring.datasource.password=senha123
 
+logging.level.org.springframework.security=TRACE
+
 spring.jpa.hibernate.ddl-auto=update
